feat: Update lecture 3

--- a/class2/index.html
+++ b/class2/index.html
@@ -3,7 +3,8 @@
         <title>타이틀</title>
     </head>
     <body>
-
+        <h1 id="title">제목입니다</h1>
+        <p id="content">본문입니다</p>
     <script src="script.js"></script>
     </body>
 </html>
