--- a/class2/index.html
+++ b/class2/index.html
@@ -1,10 +1,12 @@
 <html>
     <head>
         <title>타이틀</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1 id="title">제목입니다</h1>
-        <p id="content">본문입니다</p>
-    <script src="script.js"></script>
+        <div id="firstBox">
+            <p>안녕</p>
+        </div>
     </body>
+    <script src="script.js"></script>
 </html>
