feat: Update lecture 5

--- a/class2/index.html
+++ b/class2/index.html
@@ -4,9 +4,15 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div id="firstBox">
-            <p>안녕</p>
+        <div id="firstDiv">
+            <input id="firstInput" type="text">
+            <input id="secondInput" type="text">
+            <button onclick="showResult();">더하기!</button>
         </div>
+        <div id="result">
+        </div>
+        <button onclick="minusNum();">-</button>
+        <button onclick="plusNum();">+</button>
     </body>
     <script src="script.js"></script>
 </html>
