--- a/class2/index.html
+++ b/class2/index.html
@@ -4,9 +4,9 @@
     </head>
     <body>
         <div>
-            <button onclick="setCountry(event.target.innerText)">런던</button>
-            <button onclick="setCountry(event.target.innerText)">뉴욕</button>
-            <button onclick="setCountry(event.target.innerText)">서울</button>
+            <button onclick="setCountryLondon()">런던</button>
+            <button onclick="setCountryNewYork()">뉴욕</button>
+            <button onclick="setCountrySeoul()">서울</button>
         </div>
         <h1 id="time">시간</h1>
     </body>
