feat: Update lecture day2

--- a/class2/index.html
+++ b/class2/index.html
@@ -4,9 +4,12 @@
     </head>
     <body>
         <div>
-            <button onclick="setCountryLondon()">런던</button>
+            <!-- <button onclick="setCountryLondon()">런던</button>
             <button onclick="setCountryNewYork()">뉴욕</button>
-            <button onclick="setCountrySeoul()">서울</button>
+            <button onclick="setCountrySeoul()">서울</button> -->
+            <button id="london" onclick="setTime(event)">런던</button>
+            <button id="newyork" onclick="setTime(event)">뉴욕</button>
+            <button id="seoul" onclick="setTime(event)">서울</button>
         </div>
         <h1 id="time">시간</h1>
     </body>
