--- a/class3/index.html
+++ b/class3/index.html
@@ -1,13 +1,9 @@
 <head>
-    <link rel="stylesheet" href="style.css">
     <title>타이틀</title>
 </head>
 <body>
-    <div id="menu">
-        <button class="menu-button">버튼1</button>
-        <button class="menu-button">버튼2</button>
-        <button class="menu-button">버튼3</button>
-    </div>
+    <input id="id" style="width: 100px; height: 30px;">
+    <input id="pw" type="password" style="width: 100px; height: 30px;">
 </body>
 <script src="script.js"></script>
 </html>
