feat: Update lecture 3

--- a/class3/index.html
+++ b/class3/index.html
@@ -1,9 +1,11 @@
 <head>
+    <link rel="stylesheet" href="style.css">
     <title>타이틀</title>
 </head>
 <body>
-    <input id="id" style="width: 100px; height: 30px;">
-    <input id="pw" type="password" style="width: 100px; height: 30px;">
+    <div id="color" onclick="fadeToRed(event);">
+        div입니다.
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
