feat: Update lecture 7

--- a/class3/index.html
+++ b/class3/index.html
@@ -1,8 +1,13 @@
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"/>
     <title>타이틀</title>
 </head>
 <body>
+    <div style="display: flex; flex-direction: column;">
+        <input id="title" placeholder="제목"/>
+        <textarea id="body" placeholder="내용"></textarea>
+    </div>
+    <button onclick="submitPost()">글쓰기</button>
 </body>
 <script src="script.js"></script>
 </html>
