feat: Update lecture 8

--- a/class3/index.html
+++ b/class3/index.html
@@ -7,7 +7,7 @@
         <input id="title" placeholder="제목"/>
         <textarea id="body" placeholder="내용"></textarea>
     </div>
-    <button onclick="submitPost()">글쓰기</button>
+    <button>글쓰기</button>
 </body>
 <script src="script.js"></script>
 </html>
