feat: Update lecture 8

--- a/class3/index.html
+++ b/class3/index.html
@@ -1,4 +1,4 @@
-<head>
+<!-- <head>
     <link rel="stylesheet" href="style.css"/>
     <title>타이틀</title>
 </head>
@@ -10,4 +10,18 @@
     <button>글쓰기</button>
 </body>
 <script src="script.js"></script>
+</html> -->
+<html>
+    <head>
+        <title>타이틀</title>
+    </head>
+    <body>
+        <div>
+            <button id="london" onclick="setTime(event)">런던</button>
+            <button id="newyork" onclick="setTime(event)">뉴욕</button>
+            <button id="seoul" onclick="setTime(event)">서울</button>
+        </div>
+        <h1 id="time">시간</h1>
+    </body>
+    <script src="script.js"></script>
 </html>
