--- a/class3/index.html
+++ b/class3/index.html
@@ -1,4 +1,4 @@
-<!-- <head>
+<head>
     <link rel="stylesheet" href="style.css"/>
     <title>타이틀</title>
 </head>
@@ -10,18 +10,18 @@
     <button>글쓰기</button>
 </body>
 <script src="script.js"></script>
-</html> -->
-<html>
+</html>
+<!-- <html>
     <head>
         <title>타이틀</title>
     </head>
     <body>
         <div>
-            <button id="london" onclick="setTime(event)">런던</button>
-            <button id="newyork" onclick="setTime(event)">뉴욕</button>
-            <button id="seoul" onclick="setTime(event)">서울</button>
+            <button id="london" onclick="showInfo(event)">런던</button>
+            <button id="newyork" onclick="showInfo(event)">뉴욕</button>
+            <button id="seoul" onclick="showInfo(event)">서울</button>
         </div>
-        <h1 id="time">시간</h1>
+        <div id="country"></div>
     </body>
     <script src="script.js"></script>
-</html>
+</html> -->
