feat: Update lecture 2.5

--- a/class4/put.html
+++ b/class4/put.html
@@ -10,5 +10,5 @@
     <button onclick="modifyArticle()">수정하기</button>
 
 </body>
-<script src="script.js"></script>
+<script src="put.js"></script>
 </html>
